--- a/index.html
+++ b/index.html
@@ -27,17 +27,40 @@ BONUS: Implement a web font from font-squirrel correctly for 3 extra points.
 		<title>Code Challenge #5</title>
 		<style>
 			body {
+				background-color: #303030;
 				margin: 0;
 				padding: 0;
 			}
 			header {
 				padding: 50px 0;
-			}
-			header h1 {
-				text-align: center;
-			}
+			}			
+			
 			section {
 				padding: 25px 0;
+			}
+			.container {
+				 width: 80%;
+				 background-color: #fff;
+				 padding: 5%;
+				 margin: 0 auto;
+			}
+			h2 {
+			  margin: 10px 0 0 0;	
+			}
+			h3 {
+			  margin: 10px 0 0 0;	
+			}
+			h4 {
+			  margin: 10px 0 0 0;	
+			}
+			h5 {
+			  margin: 10px 0 0 0;	
+			}
+			h6 {
+			  margin: 10px 0 0 0;	
+			}
+			p {
+			  margin: 0 0 20px 0;	
 			}
 		</style>
 	</head>
@@ -47,6 +70,17 @@ BONUS: Implement a web font from font-squirrel correctly for 3 extra points.
 		</header>
 		<section>
 			<div class="container">
+			<h1>Spiderman</h1>
+			<h2>Spiderman 2</h2>
+			<p>Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go.Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting goSpiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go</p>
+			<h3>Spiderman 2</h3>
+			<p>Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go.Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting goSpiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go</p>
+			<h4>Spiderman 2</h4>
+			<p>Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go.Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting goSpiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go</p>
+			<h5>Spiderman 2</h5>
+			<p>Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go.Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting goSpiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go</p>
+			<h6>Spiderman 2</h6>
+			<p>Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go.Spiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting goSpiderman is a young goat in the making.He is strong and a leader. He has had a hard life so sometimes he's ok with letting go</p>
 			</div>
 		</section>
 		<footer>
